--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,7 @@
 name: Cloudcore IAC
 on:
   workflow_dispatch:
-    
+
   push:
     branches: 
       - main
@@ -51,7 +51,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -input=false -out planfile
-        continue-on-error: true 
+        #continue-on-error: true 
 
       - name: Terraform Plan Status 
         if: steps.plan.outcome == 'failure'
