--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -input=false -out planfile
-        #continue-on-error: true 
+        continue-on-error: true 
 
       - name: Terraform Plan Status 
         if: steps.plan.outcome == 'failure'
